2013-01-02  Jason Merrill  <jason@redhat.com>

	PR c++/55032
	PR c++/55245
	* tree.c (build_cplus_array_type): Copy layout information
	to main variant if necessary.

2012-12-11  Jason Merrill  <jason@redhat.com>

	PR c++/54883
	* decl2.c (min_vis_r): Handle anon visibility for enums.

2012-12-06  Jason Merrill  <jason@redhat.com>

	PR c++/55249
	* tree.c (build_vec_init_elt): Use the type of the initializer.

2012-11-29  Jason Merrill  <jason@redhat.com>

	PR c++/53862
	* pt.c (tsubst_arg_types): Add "end" parameter.
	(check_undeduced_parms): Use it.

	PR c++/51662
	* method.c (process_subob_fn): Increment function_depth around call to
	instantiate_decl.

2012-11-29  Kai Tietz  <ktietz@redhat.com>

	PR target/53912
	* class.c (dump_class_hierarchy_r): Cast from pointer via uintptr_t.
	(dump_vtable): Likewise.

2012-09-13  Jason Merrill  <jason@redhat.com>

	PR c++/54511
	* pt.c (tsubst_decl) [VAR_DECL]: Handle DECL_ANON_UNION_VAR_P.

2012-06-25  Jason Merrill  <jason@redhat.com>

	PR c++/52988
	* typeck.c (decay_conversion): Don't discard side-effects from
	expressions of nullptr_t.

2012-04-04  Steve Ellcey <sje@cup.hp.com>

	Backported from mainline.
	* decl.c (cxx_init_decl_processing): Use ptr_mode instead of Pmode.

2012-04-03  Jason Merrill  <jason@redhat.com>

	PR c++/52796
	* pt.c (tsubst_initializer_list): A pack expansion with no elements
	means value-initialization.

2012-03-01  Release Manager

	* GCC 4.6.3 released.

2012-02-14  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2012-02-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/52247
	* pt.c (tsubst_copy_asm_operands): For LABEL_DECL values call
	lookup_label on label's name and set TREE_USED.

	PR c/52181
	* decl.c (duplicate_decls): If olddecl has bigger DECL_ALIGN than
	newdecl, copy DECL_ALIGN to newdecl and or DECL_USER_ALIGN bits.

2012-02-09  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2012-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/51669